# ledwall

./: .gitignore  Cargo.toml  README.md  get-emoji.sh  reprocess_images.sh  run_on_pi.sh  update.sh
.cargo/: config.toml
crates/flat_hypercube_logic/: Cargo.toml
crates/flat_hypercube_logic/src/: float_geom.rs  geom.rs  lib.rs  puzzle.rs
crates/ledwall/: Cargo.toml
crates/ledwall/src/: animation.rs  app.rs  array_vec.rs  color.rs  frame_buffer.rs  frontend_led_panel.rs  frontend_macroquad.rs  image.rs  input.rs  main.rs  shell.rs  tetris.rs  text.rs  traits.rs
crates/ledwall/src/activities/: life.rs  mod.rs  rainbow.rs
crates/ledwall/src/activities/flat_hypercube/: animations.rs  constants.rs  mod.rs
crates/ledwall/src/activities/tetris/: animations.rs  constants.rs  display.rs  mod.rs
crates/ledwall/src/tetris/: animation.rs  constants.rs  display.rs  mod.rs
crates/ledwall/src/widgets/: mod.rs  slider.rs
crates/ledwall_demo/: Cargo.toml
crates/ledwall_demo/src/: main.rs
crates/ledwall_os/: Cargo.toml
crates/ledwall_os/src/: lib.rs  tetris.rs
crates/ledwall_rpi/: Cargo.toml
crates/ledwall_rpi/src/: main.rs
crates/preprocess_image/: Cargo.toml
crates/preprocess_image/src/: main.rs
crates/tetris_logic/: Cargo.toml
crates/tetris_logic/src/: config.rs  error.rs  gravity.rs  input.rs  lib.rs  output.rs  piece.rs  playfield.rs  pos.rs  queue.rs  rotation.rs  time.rs
img/rgba/: arrow_left copy 2.rgba  arrow_left copy.rgba  arrow_left.rgba  arrow_right copy 2.rgba  arrow_right copy.rgba  brightness.rgba  controller.rgba  controller_buttons.rgba  gradient.rgba  l2_r2.rgba  l_r.rgba  volume.rgba
img/rgba/activities/: flat_hypercube.rgba  life.rgba  tetris.rgba
img/rgba/font/: 0.rgba  1.rgba  2.rgba  3.rgba  4.rgba  5.rgba  6.rgba  7.rgba  8.rgba  9.rgba  colon.rgba  period.rgba  unknown.rgba
img/rgba/menu/: arrow_right.rgba  rainbow.rgba
src/: lib.rs
