[package]
name = "ledwall"
version = "0.1.0"
edition = "2024"

[dependencies]
colorous = "1.0.16"
macroquad = { version = "0.4.14", optional = true }
rpi-led-matrix = { version = "0.4.0", optional = true }

[lib]
name = "ledwall"

[[bin]]
name = "demo"
required-features = ["macroquad"]

[[bin]]
name = "ledwall"
required-features = ["rpi-led-matrix"]

# armv7-unknown-linux-gnueabihf
