[workspace]
members = ["crates/ledwall", "crates/preprocess_image", "crates/tetris_logic"]
resolver = "3"

[workspace.package]
authors = ["Andrew Farkas"]
edition = "2024"
rust-version = "1.90.0"
homepage = "https://ajfarkas.dev/projects/ledwall/"
repository = "https://github.com/HactarCE/ledwall/"
license = "MIT OR Apache-2.0"

[workspace.lints.rust]
rust_2018_idioms = "warn"
unused_crate_dependencies = "warn"

[workspace.lints.clippy]
correctness = { level = "deny", priority = -1 }

assigning_clones = "allow"
comparison_chain = "allow"
doc_markdown = "warn"
if_then_some_else_none = "warn"
type_complexity = "allow"
manual_let_else = "warn"
match_like_matches_macro = "allow"
semicolon_if_nothing_returned = "warn"
semicolon_inside_block = "warn"
stable_sort_primitive = "warn"
too_many_arguments = "allow"
undocumented_unsafe_blocks = "warn"
uninlined_format_args = "warn"

multiple_crate_versions = { level = "allow", priority = 1 }

[profile.dev]
opt-level = 1

[workspace.dependencies]
tetris_logic = { path = "crates/tetris_logic" }
rand = { version = "0.9.2", default-features = false }
gilrs = { version = "0.11.0" }
