[package]
name = "ledwall"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
license.workspace = true
default-run = "ledwall"

[lints]
workspace = true

[dependencies]
tetris_logic.workspace = true
colorous = "1.0.16"
gilrs = { workspace = true, optional = true }
macroquad = { version = "0.4.14", optional = true }
rand = { workspace = true, features = ["os_rng", "small_rng"] }
rpi-led-panel = { version = "0.7.0", optional = true }

[features]
default = ["gilrs", "macroquad"]
