[package]
name = "ledwall_demo"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
license.workspace = true
default-run = "ledwall_demo"

[lints]
workspace = true

[dependencies]
ledwall_os.workspace = true
macroquad = "0.4.14"
