[package]
name = "ledwall_os"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
tetris_logic.workspace = true
colorous = "1.0.16"
gilrs = { workspace = true, optional = true }
rand = { workspace = true, features = ["os_rng", "small_rng"] }

[features]
default = ["gilrs"]
