[package]
name = "ledwall_rpi"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
ledwall_os.workspace = true
gilrs.workspace = true
rpi-led-panel = "0.7.0"
